test/trivial/figueroa/WrapperCompilerError.good
WrapperCompilerError.chpl:12: error: What line number is reported for this message?
